change url and fix uncatched exception
