# API/authenticator/src/main/java/com/efrei/authenticator/controller/AuthenticatorController.java
@@ -25,7 +25,7 @@ import org.springframework.web.bind.annotation.RestController;
 import javax.validation.Valid;
 
 @RestController
-@RequestMapping("/api/users")
+@RequestMapping("/api/auth")
 public class AuthenticatorController {
 
 	@Autowired
